Destructured some elements, trying to fix opacity issue on mobile

--- a/src/components/ProjectCard/style.css
+++ b/src/components/ProjectCard/style.css
@@ -34,7 +34,8 @@
   text-align: left;
 }
 
-.description, .contributors {
+.description,
+.contributors {
   font-size: 14px;
 }
 
@@ -89,7 +90,7 @@
   }
 
   .card-image {
-    opacity: 70%;
+    opacity: 0.7;
   }
 
   .slider4 {
